fixed overflow in content

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   
   h1 {
     z-index: 2;
-    width: 318px;
+    width: 220px;
     height: 10px;
     margin-top: -15px;
     padding-left: 10px;
@@ -54,8 +54,8 @@
   .content {
     position: absolute;
     z-index: 0;
-    width: 25%;
-    height: 0%;
+    height: 120%;
+    overflow-x: hidden;
     margin-top: -10px;
     margin-left: 0px; 
   }
